// Vitest Snapshot v1

exports[`attribute > dynamic 1`] = `
{
  "children": [
    {
      "attributes": [
        {
          "end": 22,
          "name": "class",
          "start": 5,
          "type": "Attribute",
          "value": {
            "end": 22,
            "expression": Node {
              "comments": [],
              "end": 21,
              "name": "className",
              "path": {
                "parent": undefined,
              },
              "start": 12,
              "trailingComments": [],
              "type": "Identifier",
            },
            "id": null,
            "start": 11,
            "type": "Expression",
          },
        },
      ],
      "children": [],
      "component": false,
      "end": 29,
      "inline": false,
      "name": "div",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 29,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`attribute > dynamic 2`] = `
"let %%template0 = @html(\\"<div></div>\\");
let %fragment0 = @clone(%template0);
$: @attr(%child0, \\"class\\", className);
@append(%fragment0, $$root);
"
`;

exports[`attribute > dynamic boolean 1`] = `
{
  "children": [
    {
      "attributes": [
        {
          "end": 33,
          "name": "?readonly",
          "start": 10,
          "type": "Attribute",
          "value": {
            "end": 33,
            "expression": Node {
              "comments": [],
              "end": 32,
              "name": "is_readonly",
              "path": {
                "parent": undefined,
              },
              "start": 21,
              "trailingComments": [],
              "type": "Identifier",
            },
            "id": null,
            "start": 20,
            "type": "Expression",
          },
        },
      ],
      "children": [],
      "component": false,
      "end": 45,
      "inline": false,
      "name": "textarea",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 45,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`attribute > dynamic boolean 2`] = `
"let %%template0 = @html(\\"<textarea></textarea>\\");
let %fragment0 = @clone(%template0);
let %child0 = @traverse(%fragment0, [0]);
$: @toggle(%child0, \\"readonly\\", is_readonly);
@append(%fragment0, $$root);
"
`;

exports[`attribute > property 1`] = `
{
  "children": [
    {
      "attributes": [
        {
          "end": 21,
          "name": ".value",
          "start": 7,
          "type": "Attribute",
          "value": {
            "end": 21,
            "expression": Node {
              "comments": [],
              "end": 20,
              "name": "value",
              "path": {
                "parent": undefined,
              },
              "start": 15,
              "trailingComments": [],
              "type": "Identifier",
            },
            "id": null,
            "start": 14,
            "type": "Expression",
          },
        },
      ],
      "children": [],
      "component": false,
      "end": 22,
      "inline": false,
      "name": "input",
      "self_closing": true,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 22,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`attribute > property 2`] = `
"let %%template0 = @html(\\"<input />\\");
let %fragment0 = @clone(%template0);
let %child0 = @traverse(%fragment0, [0]);
$: %child0[\\"value\\"] = value;
@append(%fragment0, $$root);
"
`;

exports[`attribute > property no value 1`] = `
{
  "children": [
    {
      "attributes": [
        {
          "end": 13,
          "name": ".value",
          "start": 7,
          "type": "Attribute",
          "value": null,
        },
      ],
      "children": [],
      "component": false,
      "end": 14,
      "inline": false,
      "name": "input",
      "self_closing": true,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 14,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`attribute > property no value 2`] = `
"let %%template0 = @html(\\"<input />\\");
let %fragment0 = @clone(%template0);
let %child0 = @traverse(%fragment0, [0]);
$: %child0[\\"value\\"] = true;
@append(%fragment0, $$root);
"
`;

exports[`attribute > static 1`] = `
{
  "children": [
    {
      "attributes": [
        {
          "end": 16,
          "name": "class",
          "start": 5,
          "type": "Attribute",
          "value": {
            "decoded": "foo",
            "end": 16,
            "start": 11,
            "type": "Text",
            "value": "foo",
          },
        },
      ],
      "children": [],
      "component": false,
      "end": 23,
      "inline": false,
      "name": "div",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 23,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`attribute > static 2`] = `
"let %%template0 = @html(\\"<div class=\\\\\\"foo\\\\\\"></div>\\");
let %fragment0 = @clone(%template0);
@append(%fragment0, $$root);
"
`;

exports[`attribute > static boolean 1`] = `
{
  "children": [
    {
      "attributes": [
        {
          "end": 18,
          "name": "readonly",
          "start": 10,
          "type": "Attribute",
          "value": null,
        },
      ],
      "children": [],
      "component": false,
      "end": 30,
      "inline": false,
      "name": "textarea",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 30,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`attribute > static boolean 2`] = `
"let %%template0 = @html(\\"<textarea readonly></textarea>\\");
let %fragment0 = @clone(%template0);
@append(%fragment0, $$root);
"
`;

exports[`attribute > static unquoted 1`] = `
{
  "children": [
    {
      "attributes": [
        {
          "end": 14,
          "name": "class",
          "start": 5,
          "type": "Attribute",
          "value": {
            "decoded": "foo",
            "end": 14,
            "start": 11,
            "type": "Text",
            "value": "foo",
          },
        },
      ],
      "children": [],
      "component": false,
      "end": 21,
      "inline": false,
      "name": "div",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 21,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`attribute > static unquoted 2`] = `
"let %%template0 = @html(\\"<div class=\\\\\\"foo\\\\\\"></div>\\");
let %fragment0 = @clone(%template0);
@append(%fragment0, $$root);
"
`;

exports[`component > v:self on a custom element 1`] = `
{
  "children": [
    {
      "attributes": [],
      "children": [
        {
          "attributes": [],
          "children": [
            {
              "decoded": "hello world!",
              "end": 27,
              "start": 15,
              "type": "Text",
              "value": "hello world!",
            },
          ],
          "component": true,
          "end": 36,
          "inline": true,
          "name": "v:self",
          "self_closing": false,
          "start": 7,
          "type": "Element",
        },
      ],
      "component": true,
      "end": 44,
      "inline": false,
      "name": "x-app",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 44,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`component > v:self on a custom element 2`] = `
"let %%template0 = @html(\\"<x-app><div>hello world!</div></x-app>\\");
let %fragment0 = @clone(%template0);
let %child0 = new $$host.constructor();
let %marker0 = @traverse(%fragment0, [0, 0]);
@replace(%child0, %marker0, true);
@append(%fragment0, $$root);
"
`;

exports[`conditional logic > consequent 1`] = `
{
  "children": [
    {
      "alternate": null,
      "consequent": {
        "children": [
          {
            "attributes": [],
            "children": [
              {
                "decoded": "foo!",
                "end": 18,
                "start": 14,
                "type": "Text",
                "value": "foo!",
              },
            ],
            "component": false,
            "end": 24,
            "inline": false,
            "name": "div",
            "self_closing": false,
            "start": 9,
            "type": "Element",
          },
        ],
        "end": 24,
        "start": 9,
        "type": "Fragment",
      },
      "end": 29,
      "start": 0,
      "test": Node {
        "comments": [],
        "end": 8,
        "name": "foo",
        "path": {
          "parent": undefined,
        },
        "start": 5,
        "trailingComments": [],
        "type": "Identifier",
      },
      "type": "ConditionalStatement",
    },
  ],
  "end": 29,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`conditional logic > consequent 2`] = `
"let %%template0 = @html(\\"<!>\\");
let %fragment0 = @clone(%template0);
let %block1 = $$root => {
  let %%template1 = @html(\\"<div>foo!</div><!>\\");
  let %fragment1 = @clone(%template1);
  let %marker0 = @traverse(%fragment1, [1]);
  @after(%fragment1, $$root);
  return %marker0;
};
let %marker1 = @traverse(%fragment0, [0]);
@show(%marker1, () => foo ? %block1 : null);
@append(%fragment0, $$root);
"
`;

exports[`conditional logic > consequent and alternate 1`] = `
{
  "children": [
    {
      "alternate": {
        "children": [
          {
            "attributes": [],
            "children": [
              {
                "decoded": "bar!",
                "end": 40,
                "start": 36,
                "type": "Text",
                "value": "bar!",
              },
            ],
            "component": false,
            "end": 46,
            "inline": false,
            "name": "div",
            "self_closing": false,
            "start": 31,
            "type": "Element",
          },
        ],
        "end": 46,
        "start": 31,
        "type": "Fragment",
      },
      "consequent": {
        "children": [
          {
            "attributes": [],
            "children": [
              {
                "decoded": "foo!",
                "end": 18,
                "start": 14,
                "type": "Text",
                "value": "foo!",
              },
            ],
            "component": false,
            "end": 24,
            "inline": false,
            "name": "div",
            "self_closing": false,
            "start": 9,
            "type": "Element",
          },
        ],
        "end": 24,
        "start": 9,
        "type": "Fragment",
      },
      "end": 51,
      "start": 0,
      "test": Node {
        "comments": [],
        "end": 8,
        "name": "foo",
        "path": {
          "parent": undefined,
        },
        "start": 5,
        "trailingComments": [],
        "type": "Identifier",
      },
      "type": "ConditionalStatement",
    },
  ],
  "end": 51,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`conditional logic > consequent and alternate 2`] = `
"let %%template0 = @html(\\"<!>\\");
let %fragment0 = @clone(%template0);
let %block1 = $$root => {
  let %%template1 = @html(\\"<div>foo!</div><!>\\");
  let %fragment1 = @clone(%template1);
  let %marker0 = @traverse(%fragment1, [1]);
  @after(%fragment1, $$root);
  return %marker0;
};
let %block2 = $$root => {
  let %%template2 = @html(\\"<div>bar!</div><!>\\");
  let %fragment2 = @clone(%template2);
  let %marker1 = @traverse(%fragment2, [1]);
  @after(%fragment2, $$root);
  return %marker1;
};
let %marker2 = @traverse(%fragment0, [0]);
@show(%marker2, () => foo ? %block1 : %block2);
@append(%fragment0, $$root);
"
`;

exports[`conditional logic > consequent and alternate test 1`] = `
{
  "children": [
    {
      "alternate": {
        "alternate": null,
        "consequent": {
          "children": [
            {
              "attributes": [],
              "children": [
                {
                  "decoded": "bar!",
                  "end": 47,
                  "start": 43,
                  "type": "Text",
                  "value": "bar!",
                },
              ],
              "component": false,
              "end": 53,
              "inline": false,
              "name": "div",
              "self_closing": false,
              "start": 38,
              "type": "Element",
            },
          ],
          "end": 53,
          "start": 38,
          "type": "Fragment",
        },
        "end": 58,
        "start": 24,
        "test": Node {
          "comments": [],
          "end": 37,
          "name": "bar",
          "path": {
            "parent": undefined,
          },
          "start": 34,
          "trailingComments": [],
          "type": "Identifier",
        },
        "type": "ConditionalStatement",
      },
      "consequent": {
        "children": [
          {
            "attributes": [],
            "children": [
              {
                "decoded": "foo!",
                "end": 18,
                "start": 14,
                "type": "Text",
                "value": "foo!",
              },
            ],
            "component": false,
            "end": 24,
            "inline": false,
            "name": "div",
            "self_closing": false,
            "start": 9,
            "type": "Element",
          },
        ],
        "end": 24,
        "start": 9,
        "type": "Fragment",
      },
      "end": 58,
      "start": 0,
      "test": Node {
        "comments": [],
        "end": 8,
        "name": "foo",
        "path": {
          "parent": undefined,
        },
        "start": 5,
        "trailingComments": [],
        "type": "Identifier",
      },
      "type": "ConditionalStatement",
    },
  ],
  "end": 58,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`conditional logic > consequent and alternate test 2`] = `
"let %%template0 = @html(\\"<!>\\");
let %fragment0 = @clone(%template0);
let %block2 = $$root => {
  let %%template2 = @html(\\"<div>bar!</div><!>\\");
  let %fragment2 = @clone(%template2);
  let %marker1 = @traverse(%fragment2, [1]);
  @after(%fragment2, $$root);
  return %marker1;
};
let %block1 = $$root => {
  let %%template1 = @html(\\"<div>foo!</div><!>\\");
  let %fragment1 = @clone(%template1);
  let %marker0 = @traverse(%fragment1, [1]);
  @after(%fragment1, $$root);
  return %marker0;
};
let %marker2 = @traverse(%fragment0, [0]);
@show(%marker2, () => foo ? %block1 : bar ? %block2 : null);
@append(%fragment0, $$root);
"
`;

exports[`conditional logic > nested consequent 1`] = `
{
  "children": [
    {
      "alternate": null,
      "consequent": {
        "children": [
          {
            "attributes": [],
            "children": [
              {
                "decoded": "foo!",
                "end": 18,
                "start": 14,
                "type": "Text",
                "value": "foo!",
              },
            ],
            "component": false,
            "end": 24,
            "inline": false,
            "name": "div",
            "self_closing": false,
            "start": 9,
            "type": "Element",
          },
          {
            "alternate": null,
            "consequent": {
              "children": [
                {
                  "attributes": [],
                  "children": [
                    {
                      "decoded": "bar!",
                      "end": 42,
                      "start": 38,
                      "type": "Text",
                      "value": "bar!",
                    },
                  ],
                  "component": false,
                  "end": 48,
                  "inline": false,
                  "name": "div",
                  "self_closing": false,
                  "start": 33,
                  "type": "Element",
                },
              ],
              "end": 48,
              "start": 33,
              "type": "Fragment",
            },
            "end": 53,
            "start": 24,
            "test": Node {
              "comments": [],
              "end": 32,
              "name": "bar",
              "path": {
                "parent": undefined,
              },
              "start": 29,
              "trailingComments": [],
              "type": "Identifier",
            },
            "type": "ConditionalStatement",
          },
        ],
        "end": 53,
        "start": 9,
        "type": "Fragment",
      },
      "end": 58,
      "start": 0,
      "test": Node {
        "comments": [],
        "end": 8,
        "name": "foo",
        "path": {
          "parent": undefined,
        },
        "start": 5,
        "trailingComments": [],
        "type": "Identifier",
      },
      "type": "ConditionalStatement",
    },
  ],
  "end": 58,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`conditional logic > nested consequent 2`] = `
"let %%template0 = @html(\\"<!>\\");
let %fragment0 = @clone(%template0);
let %block2 = $$root => {
  let %%template2 = @html(\\"<div>bar!</div><!>\\");
  let %fragment2 = @clone(%template2);
  let %marker0 = @traverse(%fragment2, [1]);
  @after(%fragment2, $$root);
  return %marker0;
};
let %block1 = $$root => {
  let %%template1 = @html(\\"<div>foo!</div><!><!>\\");
  let %fragment1 = @clone(%template1);
  let %marker1 = @traverse(%fragment1, [1]);
  @show(%marker1, () => bar ? %block2 : null);
  let %marker2 = @traverse(%fragment1, [2]);
  @after(%fragment1, $$root);
  return %marker2;
};
let %marker3 = @traverse(%fragment0, [0]);
@show(%marker3, () => foo ? %block1 : null);
@append(%fragment0, $$root);
"
`;

exports[`expression > component 1`] = `
{
  "children": [
    {
      "attributes": [],
      "children": [
        {
          "decoded": "hello ",
          "end": 12,
          "start": 6,
          "type": "Text",
          "value": "hello ",
        },
        {
          "end": 18,
          "expression": Node {
            "comments": [],
            "end": 17,
            "name": "name",
            "path": {
              "parent": undefined,
            },
            "start": 13,
            "trailingComments": [],
            "type": "Identifier",
          },
          "id": null,
          "start": 12,
          "type": "Expression",
        },
        {
          "decoded": "!",
          "end": 19,
          "start": 18,
          "type": "Text",
          "value": "!",
        },
      ],
      "component": true,
      "end": 26,
      "inline": true,
      "name": "Main",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 26,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`expression > component 2`] = `
"let %%template0 = @html(\\"<div>hello <!>!</div>\\");
let %fragment0 = @clone(%template0);
let %marker0 = @traverse(%fragment0, [0, 1]);
@text(%marker0, () => name);
let %child0 = new Main();
let %marker1 = @traverse(%fragment0, [0]);
@replace(%child0, %marker1, true);
@append(%fragment0, $$root);
"
`;

exports[`expression > custom element 1`] = `
{
  "children": [
    {
      "attributes": [],
      "children": [
        {
          "decoded": "hello ",
          "end": 13,
          "start": 7,
          "type": "Text",
          "value": "hello ",
        },
        {
          "end": 19,
          "expression": Node {
            "comments": [],
            "end": 18,
            "name": "name",
            "path": {
              "parent": undefined,
            },
            "start": 14,
            "trailingComments": [],
            "type": "Identifier",
          },
          "id": null,
          "start": 13,
          "type": "Expression",
        },
        {
          "decoded": "!",
          "end": 20,
          "start": 19,
          "type": "Text",
          "value": "!",
        },
      ],
      "component": true,
      "end": 28,
      "inline": false,
      "name": "x-app",
      "self_closing": false,
      "start": 0,
      "type": "Element",
    },
  ],
  "end": 28,
  "start": 0,
  "type": "Fragment",
}
`;

exports[`expression > custom element 2`] = `
"let %%template0 = @html(\\"<x-app>hello <!>!</x-app>\\");
let %fragment0 = @clone(%template0);
let %marker0 = @traverse(%fragment0, [0, 1]);
@text(%marker0, () => name);
@append(%fragment0, $$root);
"
`;
